# ahridbms-client-rust

./: .gitignore  .prettierrc  LICENSE  README.en.md  README.md  index.html  latest.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: dev.yml
plugin-mongodb/: Cargo.toml  README.md
plugin-mongodb/src/: api.rs  lib.rs
plugin-mysql/: Cargo.toml  README.md
plugin-mysql/.changes/: config.json  initial-release.md  readme.md
plugin-mysql/.github/workflows/: covector-version-or-publish.yml
plugin-mysql/examples/vanilla/src-tauri/: Cargo.toml  tauri.conf.json
plugin-mysql/examples/vanilla/src-tauri/src/: main.rs
plugin-mysql/src/: lib.rs
plugin-postgres/: Cargo.toml  README.md
plugin-postgres/src/: api.rs  entity.rs  lib.rs
plugin-redis/: Cargo.toml  README.md
plugin-redis/src/: api.rs  entity.rs  lib.rs
plugin-redis/src/api/: hash.rs  json.rs  set.rs  string.rs
plugin-test/: Cargo.toml  README.md
plugin-test/src/: lib.rs
public/: splashscreen.html
src/: App.vue  main.ts  style.css  window.d.ts
src-tauri/: Cargo.toml  LICENSE.rtf  latest.json  tauri.conf.json
src-tauri/src/: dbms_postgres.rs  dbms_redis.rs  lib.rs  main.rs
src-tauri/src/dbms_postgres/: api.rs  entity.rs
src-tauri/src/dbms_redis/: api.rs  entity.rs
src/api/: mongodb.ts  postgres.ts  redis.ts
src/api/resis/: hash.ts  json.ts  list.ts  request.ts  set.ts  zset.ts  (+1 more)
src/components/: Editor.vue  Setting.vue  TabWidget.vue  TreeWidget.vue
src/data/: data.ts
src/locales/: en_US.ts  i18n.ts  zh_CN.ts
src/store/: index.ts  redis.ts
src/types/: Connection.d.ts  Message.d.ts  data.d.ts  error.d.ts  index.d.ts  store.d.ts
src/utils/: crypto.ts  datetime.ts  storage.ts
src/views/: Index.vue
tauri-plugin-redis/: Cargo.toml  README.md
tauri-plugin-redis/src/: api.rs  entity.rs  lib.rs  utils.rs
tauri-plugin-test/: Cargo.toml  README.md
(+55 files in other folders)
