[package]
name = "plugin-mysql"
version = "0.2.0"
authors = [ "ahriknow" ]
description = "plugin of ahridbms for mysql"
edition = "2021"
rust-version = "1.57"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.5" }
tokio = { version = "1.20.1", features = ["full"] }
mysql_async = "0.30.0"

[dev-dependencies]
tokio-test = "*"
