[package]
name = "plugin-postgres"
version = "0.2.0"
authors = [ "ahriknow" ]
description = "plugin of ahridbms for postgres"
edition = "2021"
rust-version = "1.57"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.5" }
tokio = { version = "1.20.1", features = ["full"] }
postgres = { version = "0.19.4", features = ["with-chrono-0_4"] }
tokio-postgres = "0.7.7"
openssl = "0.10.41"
chrono = "0.4.23"

[dev-dependencies]
tokio-test = "*"
