[package]
name = "plugin-redis"
version = "0.0.0"
authors = [ "ahriknow" ]
description = "plugin of ahridbms for redis"
edition = "2021"
rust-version = "1.57"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.5", features = ["api-all"] }
tokio = { version = "1.20.1", features = ["full"] }
redis = "0.21.6"
